--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site for showing weather details"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>weather App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
